Add questions and styling

--- a/index.html
+++ b/index.html
@@ -3,8 +3,135 @@
   <head>
     <meta charset="utf-8">
     <title>Epicodus Track Selector!</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.1.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
   </head>
   <body>
-    
+    <div class="container formDiv">
+      <h1>Epicodus Track Selector</h1>
+      <form>
+        <div class="form-group">
+          <label for="question1">Name:</label>
+          <input type="text" id="question1" class="form-control">
+        </div>
+        <!--end question1-->
+        <label for="question2">What kind of business would you like to work for?</label>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question2" id="optionsRadios1" value="1" checked>
+            A small start-up would be great!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question2" id="optionsRadios2" value="2">
+            Big companies = more job security. A++
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question2" id="optionsRadios3" value="3">
+            I hear that government pensions are nice...
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question2" id="optionsRadios3" value="3">
+            No preference
+          </label>
+        </div>
+        <!--end question 2-->
+        <label for="question3">What do you enjoy most when working on projects?</label>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question3" id="optionsRadios1" value="1" checked>
+            Trying to come up with the perfect color scheme
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question3" id="optionsRadios2" value="2">
+            Working out the logic for the stuff going on behind the scenes
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question3" id="optionsRadios3" value="3">
+            Making it interactive
+          </label>
+        </div>
+        <!--end question 3-->
+        <label for="question4">How do you feel about mobile app development?</label>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question4" id="optionsRadios1" value="1" checked>
+            Sounds super neat!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question4" id="optionsRadios2" value="2">
+            Meh.
+          </label>
+        </div>
+        <!--end question 4-->
+        <label for="question5">Do you want to keep developing for web?</label>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question5" id="optionsRadios1" value="1" checked>
+            Yes, definitely
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question5" id="optionsRadios2" value="2">
+            I could go either way
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question5" id="optionsRadios3" value="3">
+            Not really...
+          </label>
+        </div>
+        <!--end question 5-->
+        <label for="question6">Which track are you leaning toward right now?</label>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question6" id="optionsRadios1" value="1" checked>
+            CSS/Design
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question6" id="optionsRadios2" value="2">
+            Java/Android
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question6" id="optionsRadios3" value="3">
+            Ruby/Rails
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="question6" id="optionsRadios3" value="3">
+            C#/.Net
+          </label>
+        </div>
+        <!--end question 6-->
+        <button type="submit" class="btn btn-primary btn-lg">What do I dooooooo?</button>
+      </form>
+    </div><!--end container div-->
+    <div class="container output">
+      <div class="jumbotron">
+        <h1>You should try <span class="trackName"></span></h1>
+        <p>Hi <span class="nameOut"></span>! Thank you for filling out this survey.  Based on your results, I think you should check out <span class="trackName"></span>.  In the <span class="trackName"></span> track, you can <span id="description"></span>.  You can read more about <span class="trackName"></span> <span id="trackLink"></span></p>
+      </div>
+    </div>
   </body>
 </html>
