Add logic for capturing question values and create functions for interpreting those values

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <label class="radio-label" for="question1">1. What kind of business would you like to work for?</label>
           <div class="radio">
             <label>
-              <input type="radio" name="question1" id="company1" value="1" checked>
+              <input type="radio" name="question1" id="company1" value="1">
               A small start-up would be great!
             </label>
           </div>
@@ -50,7 +50,7 @@
           <label for="question2" class="radio-label">2. What do you enjoy most when working on projects?</label>
           <div class="radio">
             <label>
-              <input type="radio" name="question2" id="enjoy1" value="1" checked>
+              <input type="radio" name="question2" id="enjoy1" value="1">
               Trying to come up with the perfect color scheme
             </label>
           </div>
@@ -72,7 +72,7 @@
           <label for="question3">3. How do you feel about mobile app development?</label>
           <div class="radio">
             <label>
-              <input type="radio" name="question3" id="mobile1" value="1" checked>
+              <input type="radio" name="question3" id="mobile1" value="1">
               Sounds super neat!
             </label>
           </div>
@@ -88,7 +88,7 @@
           <label for="question4">4. Do you want to keep developing for web?</label>
           <div class="radio">
             <label>
-              <input type="radio" name="question4" id="web1" value="1" checked>
+              <input type="radio" name="question4" id="web1" value="1">
               Yes, definitely
             </label>
           </div>
@@ -110,7 +110,7 @@
           <label for="question5">5. Finally, which track are you leaning toward right now?</label>
           <div class="radio">
             <label>
-              <input type="radio" name="question5" id="track1" value="1" checked>
+              <input type="radio" name="question5" id="track1" value="1">
               CSS/Design
             </label>
           </div>
