Hide the form and display the result in a jumbotron

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="radio">
             <label>
               <input type="radio" name="question2" id="enjoy1" value="1">
-              Trying to come up with the perfect color scheme
+              Making it look great <em>and</em> user-friendly
             </label>
           </div>
           <div class="radio">
@@ -63,7 +63,7 @@
           <div class="radio">
             <label>
               <input type="radio" name="question2" id="enjoy3" value="3">
-              Making it interactive
+              Making my webpages interactive
             </label>
           </div>
         </div>
@@ -152,7 +152,7 @@
     <div class="container output">
       <div class="jumbotron success">
         <h1>You should try <span class="trackName"></span></h1>
-        <p>Hi <span class="nameOut"></span>! Thank you for filling out this survey.  Based on your results, I think you should check out <span class="trackName"></span>.  In the <span class="trackName"></span> track, you can <span id="description"></span>.  You can read more about <span class="trackName"></span> <span id="trackLink"></span></p>
+        <p>Hi <span class="nameOut"></span>! Thank you for filling out this survey.  Based on your results, I think you should check out <span class="trackName"></span>.  In the <span class="trackName"></span> track, you can <span id="description"></span>.  You can read more about <span class="trackName"></span> <span id="trackLink"></span>.</p>
       </div>
       <div class="jumbotron unclear">
         <h1>The future is uncertain!</span></h1>
