Add functionality for the try again button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
-    <div class="container formDiv">
+    <div class="container formDiv basicDisplay">
       <h1>Epicodus Track Selector</h1>
       <form>
         <div class="form-group">
@@ -152,9 +152,9 @@
     <div class="container output">
       <div class="jumbotron success">
         <h1>You should try <span class="trackName"></span></h1>
-        <p>Hi <span class="nameOut"></span>! Thank you for filling out this survey.  Based on your results, I think you should check out <span class="trackName"></span>.  In the <span class="trackName"></span> track, you can <span id="description"></span>.  You can read more about <span class="trackName"></span> <span id="trackLink"></span>.</p>
+        <p>Hi <span class="nameOut"></span>! Thank you for filling out this survey.  Based on your results, I think you should check out the <span class="trackName"></span> track.  There, you can <span id="description"></span>.  You can find out more about <span class="trackName"></span> <span id="trackLink"></span>.</p>
       </div>
-      <div class="jumbotron unclear">
+      <div class="jumbotron unclear basicDisplay">
         <h1>The future is uncertain!</span></h1>
         <p>Hi <span class="nameOut"></span>! Thank you for filling out this survey.  Unfortunately, the survey was unable to produce a clear winner. You can either try to take it again, <a href="http://www.epicodus.com/courses-overview/">read more</a> about the various tracks, or wait and see how your feelings change as the course goes on!</p>
       </div>
