Add bootstrap form validation states and remove alert

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <h1>Epicodus Track Selector</h1>
       <form>
         <div class="form-group">
-          <label for="name">Name:</label>
+          <label class="control-label" for="name">Name:</label>
           <input type="text" id="name" class="form-control">
         </div>
         <!--end name fields-->
         <div class="form-group">
-          <label class="radio-label" for="question1">1. What kind of business would you like to work for?</label>
+          <label class="radio-label control-label" for="question1">1. What kind of business would you like to work for?</label>
           <div class="radio">
             <label>
               <input type="radio" name="question1" id="company1" value="1">
@@ -47,7 +47,7 @@
         </div>
         <!--end question 1-->
         <div class="form-group">
-          <label for="question2" class="radio-label">2. What do you enjoy most when working on projects?</label>
+          <label for="question2" class="radio-label control-label">2. What do you enjoy most when working on projects?</label>
           <div class="radio">
             <label>
               <input type="radio" name="question2" id="enjoy1" value="1">
@@ -69,7 +69,7 @@
         </div>
         <!--end question 2-->
         <div class="form-group">
-          <label for="question3">3. How do you feel about mobile app development?</label>
+          <label for="question3" class="radio-label control-label">3. How do you feel about mobile app development?</label>
           <div class="radio">
             <label>
               <input type="radio" name="question3" id="mobile1" value="1">
@@ -91,7 +91,7 @@
         </div>
         <!--end question 3-->
         <div class="form-group">
-          <label for="question4">4. Do you want to keep developing for web?</label>
+          <label for="question4" class="radio-label control-label">4. Do you want to keep developing for web?</label>
           <div class="radio">
             <label>
               <input type="radio" name="question4" id="web1" value="1">
@@ -113,7 +113,7 @@
         </div>
         <!--end question 4-->
         <div class="form-group">
-          <label for="question5">5. Finally, which track are you leaning toward right now?</label>
+          <label for="question5" class="radio-label control-label">5. Finally, which track are you leaning toward right now?</label>
           <div class="radio">
             <label>
               <input type="radio" name="question5" id="track1" value="1">
