--- a/index.html
+++ b/index.html
@@ -160,5 +160,6 @@
       </div>
       <button id="again" class="btn btn-primary btn-lg">Try Again!</button>
     </div>
+    <footer><a href="mailto:manekej@gmail.com">E.Manek</a></footer>
   </body>
 </html>
