Add logic for grabbing classes from checked option

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
           <label class="radio-label control-label" for="question1">1. What kind of business would you like to work for?</label>
           <div class="radio">
             <label>
-              <input type="radio" name="question1" id="company1" value="1">
+              <input type="radio" name="question1" id="company1" value="1" class="rails">
               A small start-up would be great!
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="question1" id="company2" value="2">
+              <input type="radio" name="question1" id="company2" value="2" class="android net">
               Big companies = (hopefully) more stability. A++
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="question1" id="company3" value="3">
+              <input type="radio" name="question1" id="company3" value="3" class="net">
               I hear that government pensions are nice...
             </label>
           </div>
@@ -50,19 +50,19 @@
           <label for="question2" class="radio-label control-label">2. What do you enjoy most when working on projects?</label>
           <div class="radio">
             <label>
-              <input type="radio" name="question2" id="enjoy1" value="1">
+              <input type="radio" name="question2" id="enjoy1" value="1" class="design">
               Making it look great <em>and</em> user-friendly
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="question2" id="enjoy2" value="2">
+              <input type="radio" name="question2" id="enjoy2" value="2" class="android net">
               Working out the logic for the stuff going on behind the scenes
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="question2" id="enjoy3" value="3">
+              <input type="radio" name="question2" id="enjoy3" value="3" class="rails">
               Making my webpages interactive
             </label>
           </div>
@@ -72,13 +72,13 @@
           <label for="question3" class="radio-label control-label">3. How do you feel about mobile app development?</label>
           <div class="radio">
             <label>
-              <input type="radio" name="question3" id="mobile1" value="1">
+              <input type="radio" name="question3" id="mobile1" value="1" class="android">
               Sounds super neat!
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="question3" id="mobile2" value="2">
+              <input type="radio" name="question3" id="mobile2" value="2" class="design">
               Only if I get to design the UI
             </label>
           </div>
@@ -94,19 +94,19 @@
           <label for="question4" class="radio-label control-label">4. Do you want to keep developing for web?</label>
           <div class="radio">
             <label>
-              <input type="radio" name="question4" id="web1" value="1">
+              <input type="radio" name="question4" id="web1" value="1" class="rails design">
               Yes, definitely
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="question4" id="web2" value="2">
+              <input type="radio" name="question4" id="web2" value="2" class="net design">
               I could go either way
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="question4" id="web3" value="3">
+              <input type="radio" name="question4" id="web3" value="3" class="android net">
               Not really...
             </label>
           </div>
@@ -116,25 +116,25 @@
           <label for="question5" class="radio-label control-label">5. Finally, which track are you leaning toward right now?</label>
           <div class="radio">
             <label>
-              <input type="radio" name="question5" id="track1" value="1">
+              <input type="radio" name="question5" id="track1" value="1" class="design">
               CSS/Design
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="question5" id="track2" value="2">
+              <input type="radio" name="question5" id="track2" value="2" class="android">
               Java/Android
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="question5" id="track3" value="3">
+              <input type="radio" name="question5" id="track3" value="3" class="rails">
               Ruby/Rails
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="question5" id="track4" value="4">
+              <input type="radio" name="question5" id="track4" value="4" class="net">
               C#/.Net
             </label>
           </div>
