Update result link color to be more readable

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </div>
       <div class="jumbotron unclear basicDisplay">
         <h1>The future is uncertain!</span></h1>
-        <p>Hi <span class="nameOut"></span>! Thank you for filling out this survey.  Unfortunately, the survey was unable to produce a clear winner. You can either try to take it again, <a href="http://www.epicodus.com/courses-overview/">read more</a> about the various tracks, or wait and see how your feelings change as the course goes on!</p>
+        <p>Hi <span class="nameOut"></span>! Thank you for filling out this survey.  Unfortunately, the survey was unable to produce a clear winner. You can either try to take it again, <a href="http://www.epicodus.com/courses-overview/">read more</a> about the various tracks, or wait and see how your feelings change as your current course goes on!</p>
       </div>
       <button id="again" class="btn btn-primary btn-lg">Try Again!</button>
     </div>
